# Manager_Jar

./: Cargo.toml  README.md  README_EN.md  USAGE_GUIDE.md  USER_GUIDE.md  build.rs
src/: main.rs
src/cli/: commands.rs  completions.rs  mod.rs
src/core/: config.rs  logging.rs  mod.rs  process.rs
src/daemon/: mod.rs  system_daemon.rs  thread_daemon.rs
src/operations/: batch.rs  batch_new.rs  mod.rs  sequence.rs  sequence_new.rs
src/utils/: display.rs  files.rs  macros.rs  mod.rs
