[package]
name = "Manager_Jar"
version = "0.1.0"
edition = "2021"
authors = ["CreaStar <creastar@gmail.com>"]
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1.10"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"